# Rust-Solana-Portfolio

./: .gitignore  Anchor.toml  Cargo.toml  README.md  package-lock.json
01_basics/hello_world/: README.md
01_basics/shapes_calculator/: Cargo.toml
01_basics/shapes_calculator/src/: main.rs
crud-app/: Anchor.toml  README.md  package-lock.json  package.json  tsconfig.json
crud-app/programs/: Cargo.toml
crud-app/programs/crud-app/: Cargo.toml
crud-app/programs/crud-app/src/: lib.rs
crud-app/src/: crud_app.json
crud-app/src/app/: globals.css  layout.tsx
crud-app/src/app/crud/: page.tsx
crud-app/src/components/: app-header.tsx  app-layout.tsx  app-providers.tsx  cluster-dropdown.tsx  toast-tx.ts
crud-app/src/idl/: crud_backend.json
crud-app/src/lib/: anchor.ts
nft/: create-collection.ts  create-nft.ts  package-lock.json  package.json  verify-nft.ts
nft/assets/: metadata.json  my_nft.json
program-UncleKweks/: .gitignore  PROJECT_DESCRIPTION.md
program-UncleKweks/anchor_project/: Anchor.toml
program-UncleKweks/anchor_project/tests/: social_platform.ts
program-UncleKweks/frontend/: DEPLOYMENT_TROUBLESHOOTING.md  index.html  vite.config.js
program-UncleKweks/frontend/src/: App.tsx  main.tsx  program.ts  types.ts
programs/crud-backend/: Cargo.toml
programs/crud-backend/src/: lib.rs
programs/swap/: Cargo.toml
programs/swap/src/: lib.rs
swap/: .gitignore  Anchor.toml  Cargo.toml
swap/.github/workflows/: rust.yml
swap/01_basics/shapes_calculator/: README.md
swap/programs/swap/: Cargo.toml
tests/: swap.ts
(+28 files in other folders)
