[workspace]
members = [
    "01_basics/hello_world",
    "01_basics/shapes_calculator",
    "programs/*",
    "programs/swap",
    "programs/crud-backend"
]

resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

